--- a/index1.html
+++ b/index1.html
@@ -33,5 +33,6 @@
             <button class="cover-button-sec">SUBMIT YOUR APPLICATION</button>
         </div>
     </section>
+    <section class="second-screen"></section>
 </body>
 </html>
